2011-03-04  Jakub Jelinek  <jakub@redhat.com>

	Backport from mainline
	PR fortran/47878
	* io/transfer.c (read_sf): Call fbuf_getptr only at the end,
	and subtract n, dtp->u.p.sf_seen_eor and seen_comma from it.

2011-03-04  Janne Blomqvist  <jb@gcc.gnu.org>
	    Jerry DeLisle    <jvdelisle@gcc.gnu.org>

	Backport from mainline
	PR libfortran/47694
	* io/fbuf.h (fbuf_getptr): New inline function.
	* io/transfer.c (read_sf): Use fbuf_getptr and fbuf_getc to scan
	through the string instead of fbuf_read.

2011-02-22  Tobias Burnus  <burnus@net-b.de>
	    Kai-Uwe Eckhardt  <kuehro@gmx.de>

	PR libfortran/47830
	* intrinsics/c99_functions.c (roundl): Make C valid for
	HAVE_NEXTAFTERL.

2010-12-16  Release Manager

	* GCC 4.5.2 released.

2010-11-10  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/46373
	Backport from mainline:
	* io/transfer.c (data_transfer_init): Do not call flush_if_preconnected
	if this is an internal unit.

2010-11-03  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/46010
	Backport from mainline:
	* io/list_read.c (nml_parse_qualifier): Add additional conditions for
	setting the end index for loop specification. Fix some whitespace.

2010-10-21  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR fortran/46007
	Backport from trunk
	* m4/shape.m4 (shape_'rtype_kind`):  Use variable for rank.
	Allocate return array if unallocated.
	* generated/shape_i4.c:  Regenerated.
	* generated/shape_i8.c:  Regenerated.
	* generated/shape_i16.c:  Regenerated.

2010-10-06  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	Backport from mainline:
	PR libfortran/45710
	* io/write.c (namelist_write_newline): Pad character array internal
	unit records with spaces.

2010-09-22  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libfortran/45532
	Backport from mainline:
	* io/list_read.c (nml_get_obj_data): Set first_nl if the previous
	is NULL.

2010-09-17  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	Backport from mainline: